# internal/common/datamodel/user.go
@@ -7,7 +7,6 @@ type User struct {
 	ID           int64
 	Email        string
 	PasswordHash string
-	AvatarURL    string
 	CreatedAt    time.Time
 	UpdatedAt    time.Time
 }
